fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/Sales_Deal_Tier__c.field-meta.xml
<CustomField>
    <fullName>Sales_Deal_Tier__c</fullName>
    <formula>if(RIGHT(UPPER(Sales_Deal__r.Description__c),6) = &quot;TIER 1&quot;,&quot;Tier 1&quot;,
if(RIGHT(UPPER(Sales_Deal__r.Description__c),6) = &quot;TIER 1&quot;,&quot;Tier 2&quot;,
if(RIGHT(UPPER(Sales_Deal__r.Description__c),6) = &quot;TIER 1&quot;,&quot;Tier 3&quot;,
if(RIGHT(UPPER(Sales_Deal__r.Description__c),6) = &quot;TIER 1&quot;,&quot;Tier 4&quot;,
if(RIGHT(UPPER(Sales_Deal__r.Description__c),6) = &quot;TIER 1&quot;,&quot;Tier 5&quot;,
if(RIGHT(UPPER(Sales_Deal__r.Description__c),6) = &quot;TIER 1&quot;,&quot;Tier 6&quot;,
&quot;&quot;
))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Deal Tier</label>
    <type>Text</type>
</CustomField>