fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/Sales_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Number__c</fullName>
    <label>Sales Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>