fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/Sales_Org_Key__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org_Key__c</fullName>
    <formula>Material_Name__r.Sales_Org_Key__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Org Key</label>
    <type>Text</type>
</CustomField>