fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/Sales_Unit__c.field-meta.xml
<CustomField>
    <fullName>Sales_Unit__c</fullName>
    <formula>Material_Name__r.Sales_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Unit</label>
    <type>Text</type>
</CustomField>