fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/Sales_Unit_Qty__c.field-meta.xml
<CustomField>
    <fullName>Sales_Unit_Qty__c</fullName>
    <formula>Material_Name__r.Qty_Sales_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Unit Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>