fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <description>Shows total with VAT for EMEA.</description>
    <formula>IF(
AND(Price_Quote__r.BusinessUnit__c = &apos;EMEA&apos;, NOT( ISBLANK(VAT__c) ) ), (Sales_Price__c + (Sales_Price__c * VAT__c)) * Quantity__c, Sales_Price__c * Quantity__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows total with VAT for EMEA.</inlineHelpText>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>