fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/Total_Price_Per_Each__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_Per_Each__c</fullName>
    <formula>Price_Per_Each__c * Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price Per Each</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>