fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/Transferred_To__c.field-meta.xml
<CustomField>
    <fullName>Transferred_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to show user that stock is being transferred to.</description>
    <inlineHelpText>Used to show user that stock is being transferred to.</inlineHelpText>
    <label>Transferred To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Price_Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>