fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/VAT__c.field-meta.xml
<CustomField>
    <fullName>VAT__c</fullName>
    <description>VAT sent from SAP callout for EMEA.</description>
    <inlineHelpText>VAT sent from SAP callout for EMEA.</inlineHelpText>
    <label>VAT</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>