fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/VAT_Amount__c.field-meta.xml
<CustomField>
    <fullName>VAT_Amount__c</fullName>
    <description>VAT Amount is a field for EMEA to show VAT for each line item.  Shows the Total (includes VAT) - Line Price.</description>
    <formula>Total__c -  Line_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>VAT Amount is a field for EMEA to show VAT for each line item.</inlineHelpText>
    <label>VAT Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>