fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/Workflow_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Business_Unit__c</fullName>
    <formula>Price_Quote__r.BusinessUnit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Workflow Business Unit</label>
    <type>Text</type>
</CustomField>