fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/Workflow_Owner_Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Owner_Approval_Level__c</fullName>
    <formula>Price_Quote__r.Owner:User.Approval_Level__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Workflow Owner Approval Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>