fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/fields/Workflow_Owner_Region__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Owner_Region__c</fullName>
    <formula>TEXT(Price_Quote__r.Owner:User.Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Workflow Owner Region</label>
    <type>Text</type>
</CustomField>