fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Price_Quote__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Sales_Price__c</columns>
    <columns>Sales_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>