fullSandbox11072023/force-app/main/default/objects/Price_Quote_Line_Item__c/listViews/All_Created_this_week.listView-meta.xml
<ListView>
    <fullName>All_Created_this_week</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Description__c</columns>
    <columns>Eligible_Price__c</columns>
    <columns>Sales_Price__c</columns>
    <columns>Sales_Unit_Qty__c</columns>
    <columns>Quantity__c</columns>
    <columns>Price_Quote__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>All Created this week</label>
    <language>en_US</language>
</ListView>